--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,8 @@ Style/ClassAndModuleChildren:
 
 Metrics/LineLength:
   Max: 120
+  Exclude:
+    - 'config/initializers/devise.rb'
 
 Metrics/BlockLength:
   Exclude:
@@ -62,3 +64,7 @@ Metrics/MethodLength:
 
 Naming/VariableNumber:
   EnforcedStyle: 'snake_case'
+
+Naming/PredicateName:
+  Exclude:
+    - 'app/controllers/api/v1/auth_controller.rb'
