Return two sizes of images via API, use bootstrap in more places (#16)
* Change image sizes for Guest and Level

* Use bootstrap in home/show.html.slim

* Add devise-bootstrap views, convert views to slim

* Add default images, tweak active admin

* Remove app/admin from rubocop block length cop

* Return normal and thumb image paths in LevelsController

* Fix rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,7 @@ Metrics/BlockLength:
     - 'config/environments/production.rb'
     - 'config/environments/development.rb'
     - 'spec/**/*'
+    - 'app/admin/**/*'
 
 Layout/MultilineOperationIndentation:
   EnforcedStyle: indented
